Archive2/bb/83aa007998accd/output
main.cpp:35:28: error: use of undeclared identifier 'n'
    float ** p = new float[n][5];
                           ^
main.cpp:35:14: error: cannot initialize a variable of type 'float **' with an rvalue of type 'float *'
    float ** p = new float[n][5];
             ^   ~~~~~~~~~
main.cpp:35:30: error: expected ';' at end of declaration
    float ** p = new float[n][5];
                             ^
                             ;
3 errors generated.
